--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,65 +1,37 @@
-<!DOCTYPE html>
-<html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
- <link rel="stylesheet" href="/assests/stylesheets/nav.css">
-<style>
-.mySlides {display:none;}
-</style>
-<body>
+  <!-- Slideshow -->
+  <div class="slideshow-container">
+    <img class="mySlides" src="/images/Cup.png">
+    <img class="mySlides" src="/images/league_1.jpg">
+    <img class="mySlides" src="/images/league_2.jpg">
+    <img class="mySlides" src="/images/league_3.jpg">
+    <img class="mySlides" src="/images/league_4.jpg">
+  </div>
 
+  <!-- script to start automatic slideshow -->
+  <script>
+    var myIndex = 0;
+    carousel();
+  </script>
 
-<div style="height: 251px; width: 100%;">
-  <img class="mySlides" src="/images/Cup.png" style="height: 250px; width: 100%;">
-  <img class="mySlides" src="/images/lol_1.jpg" style="height: 250px; width: 100%;">
-  <img class="mySlides" src="/images/league_2.png" style="height: 250px; width: 100%;">
-  <img class="mySlides" src="/images/league_3.jpg" style="height: 250px; width: 100%;">
-  <img class="mySlides" src="/images/league_4.jpg" style="height: 250px; width: 100%;">
-</div>
-
-<script>
-var myIndex = 0;
-carousel();
-
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}
-    x[myIndex-1].style.display = "block";
-    setTimeout(carousel, 4000); // Change image every 4 seconds
-}
-</script>
-
-
-
+  <!-- Header nav bar -->
   <header>
     <div class="nav">
       <ul>
         <li class="home"><a href="/">Home</a></li>
-        <li class="Leagues"><a class="active" href="/leagues">Leagues</a></li>
-        <li class="Teams"><a href="/teams">Teams</a></li>
-        <li class="Schedule"><a href="/matches">Schedule</a></li>
-        <li class="Results"><a href="#">Results</a></li>
-        <li class="About"><a href="#">About</a></li>
-        <li><li>
+        <li><a href="/leagues">Leagues</a></li>
+        <li><a href="/teams">Teams</a></li>
+        <li><a href="/schedule">Schedule</a></li>
+        <li><a href="/results">Results</a></li>
+        <li><a href="/about">About</a></li>
         <% if user_signed_in? %>
-        Signed in as <%= current_user.email %>. Not You?
-        <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %>
+          <li>Signed in as <%= current_user.email %>. Not You? <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %></li>
         <% else %>
-        </li>
-        <li class="header-pad">
-        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-secondary"%> </li>
-        <li class="header-pad">
-        <%= link_to "Sign in", new_user_session_path, class: "btn btn-secondary" %>
-        </li>
-        <% end %></li>
-<!-- Method 1 -->
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+        <% end %>
 
+        <!-- Search bar Method 1 -->
+        <!--
         <li class="header-pad">
           <form class="header-pad form-inline">
             <div class="form-group">
@@ -68,28 +40,22 @@ function carousel() {
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </li>
-
-<!-- Method 2 -->
-      <!--  <div class="container">
-        <div class="row">
-              <div class="col-md-4 col-md-offset-3">
-                  <form action="" class="search-form">
-                    <div class="form-group has-feedback">
-                      <label for="search" class="sr-only">Search</label>
-                      <input type="text" class="form-control" name="search" id="search" placeholder="search">
-                      <span class="glyphicon glyphicon-search form-control-feedback"></span>
-                    </div>
-                  </form>
-                </div>
-          </div>
-        </div> -->
+        -->
       </ul>
+      <!-- Search bar Method 2 -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-3">
+            <form action="" class="search-form">
+              <div class="form-group has-feedback">
+                <label for="search" class="sr-only">Search</label>
+                <input type="text" class="form-control" name="search" id="search" placeholder="search">
+                <span class="glyphicon glyphicon-search form-control-feedback"></span>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+
  </header>
-
- </li>
- </ul>
-
-
-</body>
-</html>
