--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <title>eSports</title>
     <%= csrf_meta_tags %>
@@ -8,7 +9,6 @@
   </head>
 
   <body>
-
     <%= render "layouts/header" %>
     <%= yield %>
     <%= render "layouts/footer" %>
