--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,51 +1,27 @@
-
-<html>
 <head>
-
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="footer, links, icons" />
-
-	<title>Distributed Footer</title>
-
-	<link rel="stylesheet" href="css/demo.css">
 	<link rel="stylesheet" href="css/footer-distributed.css">
-
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-
 </head>
 <body>
   <footer class="footer-distributed">
-
-  			<div class="footer-right">
-
-  				<a href="#"><i class="fa fa-facebook"></i></a>
-  				<a href="#"><i class="fa fa-twitter"></i></a>
-  				<a href="#"><i class="fa fa-twitch"></i></a>
-  				<a href="#"><i class="fa fa-youtube"></i></a>
-
-  			</div>
-
-  			<div class="footer-left">
-
-  				<p class="footer-links">
-  					<a href="#">Home</a>
-
-  					<s class="padding-right"><a href="/">Leagues</a></s>
-
-            <s class="padding-right"><a href="#">Prizes</a></s>
-
-  					<s class="padding-right"><a href="#">About</a></s>
-
-  					<s class="padding-right"><a href="#">Contact</a></s>
-  				</p>
-          <br>
-  				<p>eSports &copy; 2016</p>
-					<p>Main Event - G Center</p>
-					<p>Dec 25 - 30, 2016</p>
-  			</div>
-
-  		</footer>
+  	<div class="footer-right">
+			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-twitter"></i></a>
+			<a href="#"><i class="fa fa-twitch"></i></a>
+			<a href="#"><i class="fa fa-youtube"></i></a>
+  	</div>
+		<div class="footer-left">
+  		<p class="footer-links">
+  			<a href="/">eSports</a>
+				<s class="padding-right"><a href="/leagues">Leagues</a></s>
+				<s class="padding-right"><a href="/prizes">Prizes</a></s>
+				<s class="padding-right"><a href="/about">About</a></s>
+				<s class="padding-right"><a href="/contact">Contact</a></s>
+  		</p>
+      <br>
+  		<p>eSports &copy; 2016</p>
+			<p>Main Event - G Center</p>
+			<p>Dec 25 - 30, 2016</p>
+  	</div>
+  </footer>
 </body>
-</html>
