--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
   <header>
     <div class="nav">
       <ul>
-        <li class="home"><a href="/">Home</a></li>
+        <li><a href="/">eSports</a></li>
         <li><a href="/leagues">Leagues</a></li>
         <li><a href="/teams">Teams</a></li>
         <li><a href="/schedule">Schedule</a></li>
@@ -29,20 +29,8 @@
           <li><%= link_to "Sign up", new_user_registration_path %></li>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
-
-        <!-- Search bar Method 1 -->
-        <!--
-        <li class="header-pad">
-          <form class="header-pad form-inline">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search...">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-        </li>
-        -->
       </ul>
-      <!-- Search bar Method 2 -->
+      <!-- Search bar -->
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-3">
