--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,20 +1,57 @@
-<h1>Upcoming Matches</h1>
+<!DOCTYPE html>
+<html>
 
-<div class="row">
-  <div class="col-lg-6">
-    <%= image_tag("league_1.jpg", :class => "league_logo", :id => "league_1", :title => "Team 1 vs Team 2 today @ 10:30 AM") %>
-  </div>
-  <div class="col-lg-6">
-    <%= image_tag("league_2.jpg", :class => "league_logo", :id => "league_2", :title => "Team 3 vs Team 4 today @ 12:30 PM") %>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-6">
-    <%= image_tag("league_3.jpg", :class => "league_logo", :id => "league_3", :title => "Team 1 vs Team 4 tomorrow @ 10:30 AM") %>
-  </div>
-  <div class="col-lg-6">
-    <%= image_tag("league_4.jpg", :class => "league_logo", :id => "league_4", :title => "Team 2 vs Team 3 tomorrow @ 12:30 PM") %>
-  </div>
-</div>
+  <h1>Upcoming Matches</h1>
 
-<h1>Game Snapshots</h1>
+  <div class="row">
+    <div class="col-lg-6">
+      <h3>Team 1 vs Team 2 today @ 10:30 AM</h3>
+    </div>
+
+    <div class="col-lg-6">
+      <h3>Team 3 vs Team 4 today @ 12:30 PM</h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-6">
+      <%= image_tag("league_1.jpg", :class => "league_logo", :id => "league_1", :title => "Team 1 vs Team 2 today @ 10:30 AM", :size => "400x800") %>
+    </div>
+
+    <div class="col-lg-6">
+      <%= image_tag("league_2.jpg", :class => "league_logo", :id => "league_2", :title => "Team 3 vs Team 4 today @ 12:30 PM", :size => "400x800") %>
+    </div>
+  </div>
+
+  <div>
+    <br>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-6">
+      <h3>Team 1 vs Team 4 tomorrow @ 10:30 AM</h3>
+    </div>
+
+    <div class="col-lg-6">
+      <h3>Team 2 vs Team 3 tomorrow @ 12:30 PM</h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-6">
+      <%= image_tag("league_3.jpg", :class => "league_logo", :id => "league_3", :title => "Team 1 vs Team 4 tomorrow @ 10:30 AM", :size => "400x800") %>
+    </div>
+
+    <div class="col-lg-6">
+      <%= image_tag("league_4.jpg", :class => "league_logo", :id => "league_4", :title => "Team 2 vs Team 3 tomorrow @ 12:30 PM", :size => "400x800") %>
+    </div>
+  </div>
+
+  <div>
+    <br>
+    <br>
+  </div>
+
+  <h1>Game Snapshots</h1>
+
+</html>
