--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -11,18 +11,20 @@
     </div>
 
     <div class="col-lg-6">
-      <h2>Prize:</h2>
+      <h3>Prize:</h3>
     </div>
   </div>
 
   <% @leagues.each do |league| %>
     <div class="row">
       <div class="col-lg-6">
+        <img src="/images/league_<%= league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
         <h4>
           <a href='/leagues/<%=league.id%>'>
             <%= league.league_name %>
           </a>
         </h4>
+        <br>
       </div>
 
       <div class="col-lg-6">
