fixed text size Lp

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-  <p id="notice"><%= notice %></p>
+  <p id="notice">
+    <%= notice %>
+  </p>
 
   <h1>Leagues</h1>
 
@@ -12,7 +14,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h3>Prize:</h3>
+        <h2>Prize:</h2>
       </div>
     </div>
 
