--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@ function showDivs(n) {
         <li><a href="/team_stats">Results</a></li>
         <li><a href="/about">About</a></li>
         <% if user_signed_in? %>
-        <li class="signed_in"><%= current_user.email %>'s <%= link_to "Inbox", mailbox_inbox_path %></li></li>
+        <li><%= link_to "Inbox", mailbox_inbox_path %></li>
         <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
@@ -64,8 +64,6 @@ function showDivs(n) {
         <% end %>
       </ul>
       <!-- Search bar -->
-
-
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-3">
@@ -77,11 +75,8 @@ function showDivs(n) {
               </div>
             </form>
           </div>
-
         </div>
       </div>
-
-
     </div>
 
  </header>
