--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,9 @@
     </script>
 
     <%= render "layouts/header" %>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render "layouts/footer" %>
   </body>
 </html>
