revert to 03945b04cb1a7481d087f9a0b41f99e45c94a72e

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -38,4 +38,34 @@
 
   <h1>Game Snapshots</h1>
 
+  <div class="row">
+    <div class="col-lg-6">
+      <iframe width="560" height="349" src="//www.youtube.com/embed/_fOssLa1R0w" allowfullscreen>
+        <html lang="en" dir="ltr">
+      </iframe>
+    </div>
+
+    <div class="col-lg-6">
+      <iframe width="560" height="349" src="//www.youtube.com/embed/02I5vVxlJhU" allowfullscreen>
+        <html lang="en" dir="ltr">
+      </iframe>
+      <br>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-6">
+      <iframe width="560" height="349" src="//www.youtube.com/embed/wrC1r8haao0" allowfullscreen>
+        <html lang="en" dir="ltr">
+      </iframe>
+    </div>
+
+    <div class="col-lg-6">
+      <iframe width="560" height="349" src="//www.youtube.com/embed/7BgQ239HXuE" allowfullscreen>
+        <html lang="en" dir="ltr">
+      </iframe>
+      <br>
+    </div>
+  </div>
+
 </html>
