--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-  <h1>Upcoming Matches</h1>
+<!-- Upcoming Mathces -->
+<h1>Upcoming Matches</h1>
 
   <div class="row">
     <%= image_tag("league_1.jpg", :class => "league_logo", :id => "league_1", :title => "Team 1 vs Team 2 today @ 10:30 AM", :size => "400x800") %>
@@ -18,6 +19,7 @@
   <div>
     <br>
   </div>
+
 
   <div class="row">
     <%= image_tag("league_3.jpg", :class => "league_logo", :id => "league_3", :title => "Team 1 vs Team 4 tomorrow @ 10:30 AM", :size => "400x800") %>
@@ -39,3 +41,106 @@
   <h1>Game Snapshots</h1>
 
 </html>
+
+
+<!-- Upcoming Events Section -->
+<h1>Upcoming Events</h1>
+<br> <br>
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head> -->
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("navi_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-7 col-md-3 col-lg-9">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("splyce_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-5 col-md-3 col-lg-9">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("fnatic_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-5 col-md-3 col-lg-2">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Upcoming Events Section -->
+<h1>Upcoming Events</h1>
+<br> <br>
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head> -->
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("navi_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-7 col-md-3 col-lg-9">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("splyce_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-5 col-md-3 col-lg-9">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2">
+        <%= image_tag("fnatic_logo.png", width:"150px", height: "140px")%>
+    </div>
+    <div class="col-sm-5 col-md-3 col-lg-2">
+      WHT IS THIS BLAH BLAJ BIT WORKS REALLY U SHURE ABOUT THAT Keep testing akjbsdfblskdjfbvlkjfblskjvlkdlvdlkfjvndlkjfndlkfjnbldkfjbn
+    </div>
+  </div>
+</div>
+
+
+<!-- Latest Videos Section -->
+<h1>Latest videos</h1>
