--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,8 @@
 //From Scaffolds
 
 body {
-  background-color: #fff;
-  color: #333;
+  background-color:#22262D;
+  color: #E4E2F1  ;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
