--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,17 +29,17 @@ function plusDivs(n) {
 function showDivs(n) {
   var i;
   var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}    
+  if (n > x.length) {slideIndex = 1}
   if (n < 1) {slideIndex = x.length}
   for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
+     x[i].style.display = "none";
   }
-  x[slideIndex-1].style.display = "block";  
+  x[slideIndex-1].style.display = "block";
 }
 </script>
 
 
-  <!-- script to start automatic slideshow 
+  <!-- script to start automatic slideshow
   <script>
     var myIndex = 0;
     carousel();
@@ -48,6 +48,7 @@ function showDivs(n) {
   <!-- Header nav bar -->
   <header>
     <div class="nav">
+      <body>
       <ul>
         <li><a href="/">eSports</a></li>
         <li><a href="/leagues">Leagues</a></li>
@@ -58,13 +59,12 @@ function showDivs(n) {
         <% if user_signed_in? %>
         <li class="signed_in">Signed in as: <%= current_user.email %><%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %></li>
         <% else %>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+
+        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
       </ul>
       <!-- Search bar -->
-
-
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-3">
@@ -76,11 +76,8 @@ function showDivs(n) {
               </div>
             </form>
           </div>
-
         </div>
       </div>
-
-
-    </div>
-
- </header>
+    </body>
+  </div>
+</header>
