--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -16,10 +16,10 @@
   </thead>
 
   <tbody>
-    <% @players.each do |player|%>
+    <% @players.each do |player|; user = User.where(player_id: player.id).first %>
       <tr>
-        <td></td>
-        <td></td>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= player.ign %></td>
         <td><%= player.in_game_role %></td>
         <td><%= player.country %></td>
@@ -30,5 +30,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to "new players", new_player_path%>
