--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -4,7 +4,7 @@
 
 <h2><%= @player.ign %></h2>
 
-<h4><%= current_user.first_name %> <%= current_user.last_name %></h4>
+<h4><%= user.first_name %> <%= user.last_name %></h4>
 <p>
   <strong>Age:</strong>
   <%= @player.age %>
