Added favorites to home page

--- a/app/views/favorites/_form.html.erb
+++ b/app/views/favorites/_form.html.erb
@@ -11,19 +11,18 @@
     </div>
   <% end %>
 
+  <!-- Create a drop down of available teams and players -->
+
   <div class="field">
-    <%= f.label :teamID %>
+    <%= f.label :TeamID %>
     <%= f.text_field :teamID %>
   </div>
 
-  <div class="field">
-    <%= f.label :playerID %>
-    <%= f.text_field :playerID %>
-  </div>
+  <p>Or</p>
 
   <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
+    <%= f.label :PlayerID %>
+    <%= f.text_field :playerID %>
   </div>
 
   <div class="actions">
