--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,3 +125,14 @@ img.league_logo {
 li.signed_in {
    color: lightgray;
  }
+
+//Home page
+div.upcoming_matches {
+  margin: auto;
+  width: 50%;
+}
+
+div.game_snapshots {
+  margin: auto;
+  width: 50%;
+}
