--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,9 +64,8 @@ function showDivs(n) {
         <% end %>
       </ul>
       <!-- Search bar -->
-      <div class="container">
         <div class="row">
-          <div class="col-md-4 col-md-offset-3">
+          <div class="col-sm-3 col-sm-offset-4 col-md-4 col-md-offset-3 col-lg-3 col-lg-offset-4">
             <form action="" class="search-form">
               <div class="form-group has-feedback">
                 <label for="search" class="sr-only">Search</label>
@@ -76,7 +75,6 @@ function showDivs(n) {
             </form>
           </div>
         </div>
-      </div>
     </div>
 
  </header>
