Included about and contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,16 @@
-<p>Contact page</p>
+<div id="general">
+<h3>General</h3>
+<h4>eSports</h4>
+<p>UNM</p>
+
+<p> Tel: +1-123-456-7891</p>
+<p> Fax: +1-987-654-3219</p>
+<p> Email: admin@esports.com</p>
+<br>
+</div>
+
+<div id="reach">
+<h3>Reach Us</h3>
+<p>Please reach us if you have any questions or requests concering our services.
+We will always respond to your messages within 24 hours.</p>
+</div>
