--- a/app/views/mailbox/_folders.html.erb
+++ b/app/views/mailbox/_folders.html.erb
@@ -2,21 +2,21 @@
   <li class="<%= active_page(:inbox)%>">
     <%= link_to mailbox_inbox_path do %>
     <em class="fa fa-inbox fa-lg"></em>
-    <span>Inbox</span>
+    <span style="color:lightblue">Inbox</span>
 <%end%>
 </li>
 
 <li class="<%= active_page(:sent)%>">
   <%= link_to mailbox_sent_path do %>
   <em class="fa fa-paper-plane-o fa-lg"></em>
-  <span>Sent</span>
+  <span style="color:lightblue">Sent</span>
 <%end%>
 </li>
 
 <li class="<%= active_page(:trash)%>">
   <%= link_to mailbox_trash_path do %>
   <em class="fa fa-trash-o fa-lg"></em>
-  <span>Trash</span>
+  <span style="color:lightblue">Trash</span>
 <%end%>
 </li>
 </ul>
