Add my photo and name to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -98,8 +98,8 @@
           <li>
             <figure><img src="/assets/matthew.jpg" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Name Goes Here</p>
-                <p class="team_title">Job Title Here</p>
+                <p class="team_name">Matthew</p>
+                <p class="team_title">Web and Database Developer</p>
               </figcaption>
             </figure>
           </li>
