--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -8,43 +8,29 @@
   <h1>Teams</h1>
 
   <center>
-    <div class="row">
-      <div class="col-lg-4">
-        <h3>Team name:</h3>
-      </div>
-
-      <div class="col-lg-4">
-        <h3>Team info:</h3>
-      </div>
-    </div>
-
     <% @teams.each do |team| %>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <a href='/teams/<%team.id%>'>
             <%= team.team_name %>
             <div class="row">
               <img src="/images/team_<%= team.id %>.jpg" class="img-fluid" style="width: 20%; height: 20%"/>
             </div>
           </a>
-          <br>
-          <br>
         </div>
-
-        <left>
-        <div class="col-lg-4">
+        <br>
+        <div id="team_info" class="col-sm-8">
           <div class="row">
             <b>Bio:</b> <%= team.bio %>
           </div>
-
           <div class="row">
             <b>Coach:</b> <%= team.coachID %>
           </div>
-
           <div class="row">
-            <b>League:</b> <%= League.where(id: team.league_id).first.league_name %>
+            <h3><%= League.where(id: team.league_id).first.league_name %></h3>
           </div>
         </div>
+
       </div>
     <% end %>
   </center>
