--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -11,7 +11,7 @@
     <% @teams.each do |team| %>
       <div class="row">
         <div class="col-sm-4">
-          <a href='/teams/<%team.id%>'>
+          <a href='/teams/<%=team.id%>'>
             <%= team.team_name %>
             <div class="row">
               <img src="/images/team_<%= team.id %>.jpg" class="img-fluid" style="width: 20%; height: 20%"/>
