Move all pictures to /assets/images/ and updated links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
   <body>
     <!-- Slideshow -->
     <div class="w3-content w3-display-container" style="height:250px;width:100%">
-      <img class="mySlides" src="/images/league_1.jpg" style="height:250px;width:100%">
-      <img class="mySlides" src="/images/league_2.jpg" style="height:250px;width:100%">
-      <img class="mySlides" src="/images/league_4.jpg" style="height:250px;width:100%">
+      <img class="mySlides" src="/assets/league_1.jpg" style="height:250px;width:100%">
+      <img class="mySlides" src="/assets/league_2.jpg" style="height:250px;width:100%">
+      <img class="mySlides" src="/assets/league_4.jpg" style="height:250px;width:100%">
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
       <a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
     </div>
