--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-lg-6">
           <a href='/leagues/<%=league.id%>'>
-            <img src="/images/league_<%= league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
+            <img src="/assets/league_<%= league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
             <h4>
               <%= league.league_name %>
             </h4>
