--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,38 +1,30 @@
-<!DOCTYPE html>
-<html>
+<p id="notice"><%= notice %></p>
 
-  <p id="notice">
-    <%= notice %>
-  </p>
+<h1>Teams</h1>
 
-  <h1>Teams</h1>
-
-  <center>
-    <% @teams.each do |team| %>
-      <div class="row">
-        <div class="col-sm-4">
+<center>
+  <% @teams.each do |team| %>
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="row" style="padding: 5px;">
           <a href='/teams/<%=team.id%>'>
-            <%= team.team_name %>
-            <div class="row">
-              <img src="/images/team_<%= team.id %>.jpg" class="img-fluid" style="width: 20%; height: 20%"/>
-            </div>
+            <img src="/assets/team_<%= team.id %>.logo" class="img-fluid" style="width: 40%; height: 40%"/>
           </a>
         </div>
-        <br>
-        <div id="team_info" class="col-sm-8">
-          <div class="row">
-            <b>Bio:</b> <%= team.bio %>
-          </div>
-          <div class="row">
-            <b>Coach:</b> <%= team.coachID %>
-          </div>
-          <div class="row">
-            <h3><%= League.where(id: team.league_id).first.league_name %></h3>
-          </div>
-        </div>
-
       </div>
-    <% end %>
-  </center>
+      <br>
+      <div id="team_info" class="col-sm-8">
+        <div class="row">
+          <b>Bio:</b> <%= team.bio %>
+        </div>
+        <div class="row">
+          <b>Coach:</b> <%= team.coachID %>
+        </div>
+        <div class="row">
+          <h3><%= League.where(id: team.league_id).first.league_name %></h3>
+        </div>
+      </div>
 
-</html>
+    </div>
+  <% end %>
+</center>
