Fixed width of youtube videos on small width screens

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -40,14 +40,14 @@
     <!-- Youtube videos -->
     <center>
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
-        <iframe width="560" height="349" src="//www.youtube.com/embed/_fOssLa1R0w" allowfullscreen>
+      <div class="col-xs-12 col-md-6">
+        <iframe width="100%" height="349" src="//www.youtube.com/embed/_fOssLa1R0w" allowfullscreen>
           <html lang="en" dir="ltr">
         </iframe>
       </div>
 
-      <div class="col-xs-12 col-lg-6">
-        <iframe width="560" height="349" src="//www.youtube.com/embed/02I5vVxlJhU" allowfullscreen>
+      <div class="col-xs-12 col-md-6">
+        <iframe width="100%" height="349" src="//www.youtube.com/embed/02I5vVxlJhU" allowfullscreen>
           <html lang="en" dir="ltr">
         </iframe>
         <br>
@@ -55,17 +55,16 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
-        <iframe width="560" height="349" src="//www.youtube.com/embed/wrC1r8haao0" allowfullscreen>
+      <div class="col-xs-12 col-md-6">
+        <iframe width="100%" height="349" src="//www.youtube.com/embed/wrC1r8haao0" allowfullscreen>
           <html lang="en" dir="ltr">
         </iframe>
       </div>
 
-      <div class="col-xs-12 col-lg-6">
-        <iframe width="560" height="349" src="//www.youtube.com/embed/7BgQ239HXuE" allowfullscreen>
+      <div class="col-xs-12 col-md-6">
+        <iframe width="100%" height="349" src="//www.youtube.com/embed/7BgQ239HXuE" allowfullscreen>
           <html lang="en" dir="ltr">
         </iframe>
-        <br>
       </div>
     </div>
   </center>
