Initial update to home page upcoming matches

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,8 +123,8 @@ li.signed_in {
 
 //Home page
 div.upcoming_matches {
-  margin: auto;
-  width: 50%;
+  //margin: auto;
+  //width: 50%;
 }
 
 //Footer
