--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,21 +24,23 @@
     <% end %>
   </div>
 
-  <h1>Upcoming Matches</h1>
   <div class="upcoming_matches">
-    <%= image_tag("league_1.jpg", :class => "league_logo", :id => "league_1", :title => "Team 1 vs Team 2 today @ 10:30 AM", :size => "400x800") %>
-    <br>
-    <%= image_tag("league_2.jpg", :class => "league_logo", :id => "league_2", :title => "Team 3 vs Team 4 today @ 12:30 PM", :size => "400x800") %>
-    <br>
-    <%= image_tag("league_3.jpg", :class => "league_logo", :id => "league_3", :title => "Team 1 vs Team 4 tomorrow @ 10:30 AM", :size => "400x800") %>
-    <br>
-    <%= image_tag("league_4.jpg", :class => "league_logo", :id => "league_4", :title => "Team 2 vs Team 3 tomorrow @ 12:30 PM", :size => "400x800") %>
-    <br>
+    <h1>Upcoming Matches</h1>
+    <% League.all.each do |league| %>
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="/assets/league_<%= league.id %>.jpg" class="league_logo" id="league_<%= league.id %>"/>
+        </div>
+        <div class="col-sm-8">
+          <p>The immediate Match info for this league goes here</p>
+        </div>
+      </div>
+    <% end %>
   </div>
+
   <div class="game_snapshots">
     <h1>Game Snapshots</h1>
     <!-- Youtube videos -->
-    <center>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <iframe width="100%" height="349" src="//www.youtube.com/embed/_fOssLa1R0w" allowfullscreen>
@@ -67,6 +69,4 @@
         </iframe>
       </div>
     </div>
-  </center>
   </div>
-</html>
