--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -67,7 +67,7 @@
             <figure><img src="/assets/dileep.jpg" width="130" height="130" alt="">
               <figcaption>
                 <p class="team_name">Dileep</p>
-                <p class="team_title">UserInterface Developer</p>
+                <p class="team_title">Web Developer</p>
               </figcaption>
             </figure>
           </li>
