Implemented devise in production

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -40,7 +40,7 @@
         <h2>People Behind</h2>
         <ul class="clear">
           <li>
-            <figure><img src="/assets/matt.jpg" width="130" height="130" alt="">
+            <figure><img src="/assets/bhanu.jpg" width="130" height="130" alt="">
               <figcaption>
                 <p class="team_name">Bhanu</p>
                 <p class="team_title">Job Title Here</p>
@@ -74,8 +74,8 @@
           <li>
             <figure><img src="/assets/sunil.jpg" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Name Goes Here</p>
-                <p class="team_title">Job Title Here</p>
+                <p class="team_name">Sunil</p>
+                <p class="team_title">Software Engineer</p>
               </figcaption>
             </figure>
           </li>
@@ -88,10 +88,10 @@
             </figure>
           </li>
           <li>
-            <figure><img src="/assets/nat.jpg" width="130" height="130" alt="">
+            <figure><img src="/assets/Sunil.jpg" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Name Goes Here</p>
-                <p class="team_title">Job Title Here</p>
+                <p class="team_name">Sunil</p>
+                <p class="team_title">Software Engineer</p>
               </figcaption>
             </figure>
           </li>
