--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,7 +53,7 @@ function showDivs(n) {
         <li><a href="/leagues">Leagues</a></li>
         <li><a href="/teams">Teams</a></li>
         <li><a href="/schedule">Schedule</a></li>
-        <li><a href="/team_stats">Results</a></li>
+        <li><a href="/statistics">Results</a></li>
         <li><a href="/about">About</a></li>
         <% if user_signed_in? %>
         <li><%= link_to "Inbox", mailbox_inbox_path %></li>
