--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,17 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Results</h1>
-<div class="table-responsive">
-  <table class="table" style="overflow-x: auto">
-  <table style="width:auto">
   <% @matches.each do |match| %>
-    <div class="r">
-      <div class="col">
+  <div class = "table_responsive">
+    <div class= "table" style="border:1px solid black;">
         <b>Match: <thead><%= match.match_date_time.to_date %></thead></b>
-        <br>
-      </div>
-
-            <left>
             <div class="col">
               <div class="r">
                 <table>
@@ -24,16 +17,14 @@
                 <%=  link_to match.team2Score, match if match.team1Score < match.team2Score %>
                 <%= match.team1Score if match.team1Score > match.team2Score %>
               </div>
-
-
               <div class="r">
                 <b>League:</b> <%= League.where(id: match.league_id).first.league_name %>
               </div>
             </div>
           <br>
           <br>
-        </table>
         </div>
           <% end %>
+      </div>
 
       </html>
