--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,7 +63,7 @@ function showDivs(n) {
         <% end %>
       </ul>
       <!-- Search bar -->
-      <div class="row">
+      <!--<div class="row">
         <div class="col-sm-3 col-sm-offset-4 col-md-4 col-md-offset-3 col-lg-3 col-lg-offset-4">
           <form action="" class="search-form">
             <div class="form-group has-feedback">
@@ -73,7 +73,8 @@ function showDivs(n) {
             </div>
           </form>
         </div>
-      </div>
+      </div>-->
+      
     </div>
 
  </header>
