--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,37 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Statistics</h1>
+<h1>Results</h1>
+  <% @matches.each do |match| %>
+  <div class = "col-sm-6" "col-lg-4">
+    <div class= "table" style="border:1px solid black;">
+        <b>Match: <%= match.match_date_time.to_date %></b>
+            <div class="col">
+                <b>Team:</b> <%= Team.where(id: match.team1ID).first.team_name %>
+                <%=  link_to match.team1Score, match if match.team1Score > match.team2Score %>
+                <%= match.team1Score if match.team1Score < match.team2Score %>
+              </div>
+              <div class="r">
+                <b>Team:</b> <%= Team.where(id: match.team2ID).first.team_name %>
+                <%=  link_to match.team2Score, match if match.team1Score < match.team2Score %>
+                <%= match.team1Score if match.team1Score > match.team2Score %>
+              </div>
+              <div class="r">
+                <b>League:</b> <%= League.where(id: match.league_id).first.league_name %>
+              </div>
+          <br>
+          <br>
+    </div>
+  </div>
+          <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Games played</th>
-      <th>Kills</th>
-      <th>Deaths</th>
-      <th>Wins</th>
-      <th>Losses</th>
-      <th>Ties</th>
-      <th>Team</th>
-      <th>Match</th>
-      <th>Season</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @statistics.each do |statistic| %>
-      <tr>
-        <td><%= statistic.games_played %></td>
-        <td><%= statistic.kills %></td>
-        <td><%= statistic.deaths %></td>
-        <td><%= statistic.wins %></td>
-        <td><%= statistic.losses %></td>
-        <td><%= statistic.ties %></td>
-        <td><%= statistic.team %></td>
-        <td><%= statistic.match %></td>
-        <td><%= statistic.season %></td>
-        <td><%= link_to 'Show', statistic %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      </html>
