--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,8 +34,9 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    //color: #fff;
+    //background-color: #000;
+    cursor: pointer;
   }
 }
 
@@ -93,10 +94,6 @@ td {
   padding: 5px;
 }
 
-//Home page
-.img-fluid{
-   background-color: black;
-}
 //Players
 li.players {
   list-style-type: none;
