--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -8,7 +8,7 @@
       <div class="col-sm-4">
         <div class="row" style="padding: 5px;">
           <a href='/teams/<%=team.id%>'>
-            <img src="/assets/team_<%= team.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
+            <img src="/assets/team_<%= team.id %>.png" style="width: 40%; height: 40%"/>
           </a>
         </div>
       </div>
