--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,7 @@
     <h1><strong><%= @team.team_name %></strong></h1>
     <img class="team_logo" src="/assets/team_<%= @team.id %>.png" style="width:80%"/>
     <h3><%= League.find(String(@team.league_id)).league_name %></h3>
-    <p><strong>Coach:</strong></p>
+    <p><strong>Coach: <%= coach = User.find(String(@team.coachID)).first_name%> <%= coach = User.find(String(@team.coachID)).last_name%></strong></p>
     <p class="team-bio"><%= @team.bio %></p>
   </div>
   <div class="col-xs-12 col-sm-6">
