--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Searches</h1>
+<h1>Search results</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Leagues Found</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,9 +13,11 @@
   <tbody>
     <% @searches.each do |search| %>
       <tr>
-        <% puts search %>      
-        <td><%= link_to search, search %></td>
-       
+
+       <!-- <td><%= link_to search.attributes.keys, search %></td>-->
+        <% if search.has_attribute?("league_name") %>    
+          <td><%= link_to search.league_name, search %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -23,4 +25,23 @@
 
 <br>
 
-<%= link_to 'New Search', new_search_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Teams Found</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @searches.each do |search| %>
+      <tr>
+
+       <!-- <td><%= link_to search.attributes.keys, search %></td>-->
+        <% if search.has_attribute?("team_name") %>    
+          <td><%= link_to search.team_name, search %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
