--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -74,7 +74,7 @@
 
 
 <!-- Upcoming Events Section -->
-<h1><font face="Serif" color="#ffffff">Upcoming Events</font></h1>
+<h1><br><br><font face="Serif" color="#ffffff">Upcoming Events</font></h1>
 <hr>
 <div class="container">
   <div class="row">
@@ -119,7 +119,7 @@
 
 <!-- Youtube videos -->
 <div class="game_snapshots">
-  <h1>Latest Videos</h1>
+  <h1><br><br>Latest Videos</h1>
   <div class="row">
     <div class="col-xs-12 col-md-6">
       <iframe width="100%" height="349" src="//www.youtube.com/embed/_fOssLa1R0w" allowfullscreen>
