--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,6 +106,12 @@ img.league_logo {
   height: inherit;
 }
 
+//Home page
+img.upcoming_matches_team_logo {
+  height:25%;
+  width:25%;
+}
+
 li.signed_in {
    color: lightgray;
  }
